--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,4 +1,4 @@
-bleak==0.21.1
+bleak  # No version currently supports Python 3.13 as of September 2025. Remove or update when available.
 bleak-winrt==1.2.0
 contourpy==1.2.0
 cycler==0.12.1
@@ -9,11 +9,11 @@ matplotlib==3.8.3
 numpy==1.26.4
 packaging==24.0
 paho-mqtt==2.0.0
-pillow==10.2.0
-psycopg2-binary==2.9.6
+pillow
+psycopg2-binary
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
-scipy==1.12.0
+# scipy==1.12.0
 six==1.16.0
 typing_extensions==4.11.0
